--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gb2260"
 version = "0.1.2"
-authors = ["messense <messense@icloud.com>"]
+authors = ["messense <messense@icloud.com>", "huangjj27 <huangjj.27@qq.com>"]
 description = "The Rust implementation for looking up Chinese administrative divisions"
 keywords = ["chinese", "divisions"]
 license = "MIT"
